--- a/Assignment3/CMakeLists.txt
+++ b/Assignment3/CMakeLists.txt
@@ -5,8 +5,11 @@ find_package(OpenCV REQUIRED)
 
 set(CMAKE_CXX_STANDARD 17)
 
-include_directories(/usr/local/include ./include)
+# 编译可进行调试的文件
+set(CMAKE_BUILD_TYPE Debug)
 
-add_executable(Rasterizer main.cpp rasterizer.hpp rasterizer.cpp global.hpp Triangle.hpp Triangle.cpp Texture.hpp Texture.cpp Shader.hpp OBJ_Loader.h)
+include_directories(/usr/local/include include)
+
+add_executable(Rasterizer main.cpp src/rasterizer.cpp src/Triangle.cpp src/Texture.cpp)
 target_link_libraries(Rasterizer ${OpenCV_LIBRARIES})
 #target_compile_options(Rasterizer PUBLIC -Wall -Wextra -pedantic)
